fix some connection issues to samples work's on